--- a/index.html
+++ b/index.html
@@ -6,8 +6,55 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
-
+    <div class="body1">
+     <div class="header">
+       <div>Header Logo</div>
+       <ul>
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+       </ul>
+       <div class="header2">
+        <div>This website is awesome</div>
+        <div>lorem</div>
+        <button>Sign up</button>
+        <img src="#" alt="Placeholder text">
+       </div>
+     </div>    
+    </div>
+    <div class="body2">
+      <div>Some random information.</div>
+      <div class="img">
+       <img src="#" alt="Placeholder text">
+       <div>lorem</div>
+      </div> 
+      <div class="img">
+        <img src="#" alt="Placeholder text">
+        <div>lorem</div>
+      </div>  
+      <div class="img">
+        <img src="#" alt="Placeholder text">
+        <div>lorem</div>
+      </div>    
+      <div class="img">
+        <img src="#" alt="Placeholder text">
+        <div>lorem</div>
+      </div>
+    </div>
+    <div class="body3">
+      <div>lorem</div>
+      <div>- Thor, God of Thunder</div>
+    </div>
+    <div class="body4">
+      <div class="shell">
+        <div>Call to action! It's time!</div>
+        <div>lorem</div>
+        <button>Sign up</button>
+      </div>
+    </div>
+    <div class="footer">
+     <div>Stuff about copyright</div>
+    </div>
 
 
   </body>
