Started CSS - general shape of webpage created

--- a/index.html
+++ b/index.html
@@ -5,55 +5,64 @@
     <title>Project: Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  
   <body>
     <div class="body1">
-     <div class="header">
-       <div>Header Logo</div>
-       <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-       </ul>
-       <div class="header2">
-        <div>This website is awesome</div>
-        <div>lorem</div>
-        <button>Sign up</button>
-        <img src="#" alt="Placeholder text">
-       </div>
-     </div>    
+      <div class="header1">
+        <div>Header Logo</div>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div> 
+      <div class="header2">
+        <div class="left">  
+          <div>This website is awesome</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas placeat sunt totam et quasi.</div>
+          <button>Sign up</button>
+        </div>
+        <div class="right"> 
+          <img src="#" alt="Placeholder text">
+        </div>
+      </div>    
     </div>
+
     <div class="body2">
-      <div>Some random information.</div>
+      <div class="header1">Some random information.</div>
       <div class="img">
-       <img src="#" alt="Placeholder text">
-       <div>lorem</div>
+        <img src="#" alt="Placeholder text">
+        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
       </div> 
       <div class="img">
         <img src="#" alt="Placeholder text">
-        <div>lorem</div>
+        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
       </div>  
       <div class="img">
         <img src="#" alt="Placeholder text">
-        <div>lorem</div>
+        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
       </div>    
       <div class="img">
         <img src="#" alt="Placeholder text">
-        <div>lorem</div>
+        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
       </div>
     </div>
+
     <div class="body3">
       <div>lorem</div>
       <div>- Thor, God of Thunder</div>
     </div>
+
     <div class="body4">
       <div class="shell">
         <div>Call to action! It's time!</div>
         <div>lorem</div>
-        <button>Sign up</button>
+        <button class="button">Sign up</button>
       </div>
     </div>
+
     <div class="footer">
-     <div>Stuff about copyright</div>
+      <div>Stuff about copyright</div>
     </div>
 
 
