Mostly completed Landing Page. I intend to return to it later to make it prettier

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Project: Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
     <div class="body1">
       <div class="header1">
@@ -18,46 +18,50 @@
       </div> 
       <div class="header2">
         <div class="left">  
-          <div>This website is awesome</div>
+          <h1>This website is awesome</h1>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas placeat sunt totam et quasi.</div>
           <button>Sign up</button>
         </div>
         <div class="right"> 
-          <img src="#" alt="Placeholder text">
+          <img src="./placeholder-image.jpg" alt="Placeholder text">
         </div>
       </div>    
     </div>
 
     <div class="body2">
       <div class="header1">Some random information.</div>
-      <div class="img">
-        <img src="#" alt="Placeholder text">
-        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
-      </div> 
-      <div class="img">
-        <img src="#" alt="Placeholder text">
-        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
-      </div>  
-      <div class="img">
-        <img src="#" alt="Placeholder text">
-        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
-      </div>    
-      <div class="img">
-        <img src="#" alt="Placeholder text">
-        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ut tempora quibusdam perferendis corrupti dolorum perspiciatis, porro, quidem quia ea deserunt.</div>
+      <div class="imgs"> 
+        <div class="info">  
+          <img src="./placeholder-image.jpg" alt="Placeholder text">
+          <div class="txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+        <div class="info">  
+          <img src="./placeholder-image.jpg" alt="Placeholder text">
+          <div class="txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+        <div class="info">  
+          <img src="./placeholder-image.jpg" alt="Placeholder text">
+          <div class="txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
+        <div class="info">  
+          <img src="./placeholder-image.jpg" alt="Placeholder text">
+          <div class="txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+        </div>
       </div>
     </div>
 
     <div class="body3">
-      <div>lorem</div>
-      <div>- Thor, God of Thunder</div>
+      <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia modi similique repudiandae nemo quod, dignissimos expedita magnam ratione quidem, quas necessitatibus? Quae omnis sit harum consequuntur perspiciatis nemo reprehenderit dolor.</div>
+      <p>- Thor, God of Thunder</p>
     </div>
 
     <div class="body4">
       <div class="shell">
-        <div>Call to action! It's time!</div>
-        <div>lorem</div>
-        <button class="button">Sign up</button>
+        <div class="txt">
+          <div>Call to action! It's time!</div>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis architecto magnam sint enim.</p>
+        </div>  
+        <button>Sign up</button>
       </div>
     </div>
 
